Add js and html for grocery example

--- a/grocery/views/tutorialroute.html
+++ b/grocery/views/tutorialroute.html
@@ -4,7 +4,7 @@
 
 <h4> {{ routescopeObject.routetutorial }} </h4>
 
-<a href="!#/">Link to scope tutorial page</a>
+<a href="#/!">Link to scope tutorial page</a>
 
 
-<a href="!#/randompage">Bad Link page</a>
+<a href="#!/randompage">Bad Link page</a>
