--- a/grocery/views/tutorialscope.html
+++ b/grocery/views/tutorialscope.html
@@ -17,5 +17,5 @@
 
     <span welcomemessage ></span>
 
-    <a href='!#/tutorialroute'> Link to Route Page</a>
+    <a href='#!/tutorialroute'> Link to Route Page</a>
 
