--- a/grocery/views/groceryList.html
+++ b/grocery/views/groceryList.html
@@ -4,7 +4,7 @@
         Add Grocery Item</a>
 
     <ul class="list-group">
-            <li ng-repeat="item in groceryItems | orderBy 'date'" class="list-group-item text-center clearfix">
+            <li ng-repeat="item in groceryItems | orderBy:'date'" class="list-group-item text-center clearfix">
                 <span style="font-weight: bold">{{ item.itemName| uppercase}}</span>
                 <a href="/addItem/edit/{{ item.id }}" class="btn btn-sm btn-default pull-right">
                     <span class="glyphicon glyphicon-pencil"></span>
