--- a/grocery/views/addItem.html
+++ b/grocery/views/addItem.html
@@ -5,12 +5,13 @@
 
     <form name="groceryForm">
         <div class="form-group">
-            <input class="form-control" type="text" placeholder="Grocery Item" ng-model="">
+            <input class="form-control" type="text" placeholder="Grocery Item" ng-model="groceryitem.itemName">
         </div>
 
         <div class="form-group">
             <button type="button" class="btn btn-success btn-lg btn-block" ng-click="save()">
-                <span class="glyphicon glyphicon"
+                <span class="glyphicon glyphicon-pushpin"></span>
+                Save
             </button>
         </div>
 
@@ -22,5 +23,4 @@
             </a>
         </div>
     </form>
-
 </div>
