--- a/grocery/views/groceryList.html
+++ b/grocery/views/groceryList.html
@@ -1,5 +1,5 @@
 <div class="col-xl-12">
-    <a href="#/addItem" style="margin-bottom: 10px;" class="btn btn-primary btn-lg btn-block">
+    <a href="#!/addItem" style="margin-bottom: 10px;" class="btn btn-primary btn-lg btn-block">
         <span class="glyphicon glyphicon-plus"></span>
         Add Grocery Item</a>
 
@@ -7,11 +7,11 @@
             <li ng-repeat="item in groceryItems | orderBy:'date'" class="list-group-item text-center clearfix">
                 <span style="font-weight: bold">{{ item.itemName| uppercase}}</span>
 
-                <button type="button" class="btn btn-sm btn-danger pull-right"  ng-click="removeItem(item)">
+                <button type="button" class="btn btn-sm btn-danger pull-right"  ng-click="remove(item)">
                     <span class="glyphicon glyphicon-trash"></span>
                 </button>
 
-                <a href="#/addItem/edit/{{ item.id }}" class="btn btn-sm btn-default pull-right">
+                <a href="#!/addItem/edit/{{ item.id }}" class="btn btn-sm btn-default pull-right">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
             </li>
