--- a/grocery/views/addItem.html
+++ b/grocery/views/addItem.html
@@ -5,7 +5,7 @@
 
     <form name="groceryForm">
         <div class="form-group">
-            <input class="form-control" type="text" placeholder="Grocery Item" ng-model="groceryItems.itemName">
+            <input class="form-control" type="text" placeholder="Grocery Item" ng-model="groceryItem.itemName">
         </div>
 
         <div class="form-group">
