--- a/grocery/views/groceryList.html
+++ b/grocery/views/groceryList.html
@@ -11,7 +11,7 @@
                     <span class="glyphicon glyphicon-trash"></span>
                 </button>
 
-                <a href="#!/addItem/edit/{{ item.id }}" class="btn btn-sm btn-default pull-right">
+                <a href="#!/addItem/{{ item.id }}" class="btn btn-sm btn-default pull-right">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
             </li>
