--- a/grocery/views/addItem.html
+++ b/grocery/views/addItem.html
@@ -4,12 +4,23 @@
     </div>
 
     <form name="groceryForm">
-        <div class="form-group">
-            <input class="form-control" type="text" placeholder="Grocery Item" ng-model="groceryItem.itemName">
+
+        <p><b>Dirty: </b>  {{groceryForm.$dirty}}</p>
+        <p><b>Pristine: </b> {{groceryForm.$pristine}}</p>
+        <p><b>Valid: </b>  {{groceryForm.$valid}}</p>
+
+        <div class="alert alert-danger" role="alert" ng-show="groceryForm.$dirty && !groceryForm.$valid">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error !</span>
+            Enter a valid grocery Item
         </div>
 
         <div class="form-group">
-            <button type="button" class="btn btn-success btn-lg btn-block" ng-click="save()">
+            <input typeof="text" ng-pattern="/^[a-zA-Z]*$/" class="form-control" type="text" placeholder="Grocery Item" ng-model="groceryItem.itemName" required>
+        </div>
+
+        <div class="form-group">
+            <button type="button" class="btn btn-success btn-lg btn-block" ng-click="groceryForm.$valid && save()">
                 <span class="glyphicon glyphicon-pushpin"></span>
                 Save
             </button>
