--- a/grocery/views/groceryList.html
+++ b/grocery/views/groceryList.html
@@ -5,15 +5,7 @@
 
     <ul class="list-group">
             <li ng-repeat="item in groceryItems | orderBy:'- date'" class="list-group-item text-center clearfix">
-                <span style="font-weight: bold">{{ item.itemName| uppercase}}</span>
-
-                <button type="button" class="btn btn-sm btn-danger pull-right"  ng-click="remove(item)">
-                    <span class="glyphicon glyphicon-trash"></span>
-                </button>
-
-                <a href="#!/addItem/edit/{{ item.id }}" class="btn btn-sm btn-default pull-right">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
+            <tb-grocery-item></tb-grocery-item>
             </li>
         </ul>
 </div>
