--- a/grocery/views/groceryItem.html
+++ b/grocery/views/groceryItem.html
@@ -1,4 +1,10 @@
-<span style="font-weight: bold">{{ item.itemName| uppercase}}</span>
+<button type="button" class="btn btn-sm btn-success pull-left" ng-click="markCompleted(item)">
+
+    <span class="glyphicon"  ng-class=" item.completed ? 'glyphicon-check' : 'glyphicon-unchecked' "></span>
+
+</button>
+
+<span ng-class="{strike:item.completed}" style="font-weight: bold">{{ item.itemName| uppercase}}</span>
 
 
 <button type="button" class="btn btn-sm btn-danger pull-right"  ng-click="remove(item)">
